lock node and pnpm version

--- a/package.json
+++ b/package.json
@@ -20,5 +20,6 @@
   "devDependencies": {
     "typescript": "^5.4.5",
     "vue-tsc": "^2.0.19"
-  }
+  },
+  "packageManager": "pnpm@9.1.4+sha256.30a1801ac4e723779efed13a21f4c39f9eb6c9fbb4ced101bce06b422593d7c9"
 }
