--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "tabWidth": 2,
   "semi": false,
-  "trailingComma": "all",
+  "trailingComma": "none",
   "singleQuote": true,
   "printWidth": 256
 }
