--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "typecheck": "nuxt typecheck"
   },
   "dependencies": {
-    "@nuxt/eslint": "^0.3.13",
+    "@iconify-json/heroicons": "^1.1.21",
+    "@iconify-json/simple-icons": "^1.1.104",
     "@nuxt/fonts": "^0.7.0",
     "@nuxt/ui-pro": "^1.2.0",
-    "nuxt": "^3.11.2",
-    "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
+    "nuxt": "^3.11.2"
   },
   "devDependencies": {
-    "typescript": "^5.4.5",
-    "vue-tsc": "1.8.27"
-  },
-  "packageManager": "pnpm@9.2.0+sha256.94fab213df221c55b6956b14a2264c21c6203cca9f0b3b95ff2fe9b84b120390"
+    "@nuxt/eslint": "^0.3.13",
+    "eslint": "^9.4.0",
+    "vue-tsc": "^2.0.19"
+  }
 }
